[package]
name = "bath-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.38"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
axum = "0.7"
serde = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"